tests/paczka1/fuzzy1/55897997.err
Error in line 12: 41kTFeF A414 52,5
Error in line 28: RlZgtfsrXi A687 91,3
